--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+     const firebaseConfig = {
+    apiKey: "AIzaSyBtD0Qf1JVkeQMTsst4ESgXc8M_YnO8kuA",
+    authDomain: "ficharpgordem-17300.firebaseapp.com",
+    projectId: "ficharpgordem-17300",
+    storageBucket: "ficharpgordem-17300.appspot.com",
+    messagingSenderId: "1013539027911",
+    appId: "1:1013539027911:web:cd477d9bc09b30ebc277e2"
+  };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
